--- a/stylesheets/_home.scss
+++ b/stylesheets/_home.scss
@@ -112,6 +112,7 @@ $icon-size: 100px;
   font-size: 1.3em;
   color: $darker-grey;
   line-height: 135%;
+  text-align: justify;
 }
 
 .contact__title {
